--- a/platformio.ini
+++ b/platformio.ini
@@ -1,23 +1,23 @@
-;PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-[env:esp wrover kit]
+[env]
 platform = espressif32
 framework = arduino
 board = esp-wrover-kit
 monitor_speed = 115200
-upload_port = /dev/ttyUSB0
-
-
 lib_deps =
   Adafruit Unified Sensor
   DHT sensor library
   MH-Z19
   MQTT
+  ArduinoOTA
+
+[env:usb0]
+build_flags = '-D DEVICE_NAME="esp-office"' '-D MQTT_CLIENTID="office"'
+upload_port = /dev/ttyUSB0
+
+[env:office ota]
+build_flags = '-D DEVICE_NAME="esp-office"' '-D MQTT_CLIENTID="office"'
+upload_protocol = espota
+upload_port = 192.168.4.3
+upload_flags =
+             --port=3232
+             --auth=FooBar123
