Added more envs

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,13 +11,50 @@ lib_deps =
   ArduinoOTA
 
 [env:usb0]
-build_flags = '-D DEVICE_NAME="esp-office"' '-D MQTT_CLIENTID="office"'
+; remember to set while flashing first time
+; build_flags = '-D DEVICE_NAME=""' '-D MQTT_CLIENTID=""'
 upload_port = /dev/ttyUSB0
 
 [env:office ota]
 build_flags = '-D DEVICE_NAME="esp-office"' '-D MQTT_CLIENTID="office"'
 upload_protocol = espota
-upload_port = 192.168.4.3
+upload_port = 192.168.4.131
+upload_flags =
+             --port=3232
+             --auth=FooBar123
+
+
+[env:bedroom ota]
+build_flags = '-D DEVICE_NAME="esp-bedroom"' '-D MQTT_CLIENTID="bedroom"'
+upload_protocol = espota
+upload_port = 192.168.4.132
+upload_flags =
+             --port=3232
+             --auth=FooBar123
+
+
+[env:krystek ota]
+build_flags = '-D DEVICE_NAME="esp-krystek"' '-D MQTT_CLIENTID="krystek"'
+upload_protocol = espota
+upload_port = 192.168.4.133
+upload_flags =
+             --port=3232
+             --auth=FooBar123
+
+
+[env:kamyk ota]
+build_flags = '-D DEVICE_NAME="esp-kamyk"' '-D MQTT_CLIENTID="kamyk"'
+upload_protocol = espota
+upload_port = 192.168.4.134
+upload_flags =
+             --port=3232
+             --auth=FooBar123
+
+
+[env:livingroom ota]
+build_flags = '-D DEVICE_NAME="esp-livingroom"' '-D MQTT_CLIENTID="livingroom"'
+upload_protocol = espota
+upload_port = 192.168.4.133
 upload_flags =
              --port=3232
              --auth=FooBar123
