changes changes changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@ lib_deps =
 
 [env:usb0]
 ; remember to set while flashing first time
-; build_flags = '-D DEVICE_NAME=""' '-D MQTT_CLIENTID=""'
+build_flags = '-D DEVICE_NAME="esp-krystek"' '-D MQTT_CLIENTID="krystek"'
 upload_port = /dev/ttyUSB0
 
 [env:office ota]
@@ -54,7 +54,7 @@ upload_flags =
 [env:livingroom ota]
 build_flags = '-D DEVICE_NAME="esp-livingroom"' '-D MQTT_CLIENTID="livingroom"'
 upload_protocol = espota
-upload_port = 192.168.4.133
+upload_port = 192.168.4.135
 upload_flags =
              --port=3232
              --auth=FooBar123
